[package]
name = "kid"
version = "0.1.0"
authors = ["Dominic Burkart <dominicburkart@gmail.com>"]

[dependencies]
ndarray = "0.11"
quick-error = "*"
#ndarray = { version = "0.11", features = ["blas"] } todo find a way to build ndarray with optimization
#blas-src = { version = "0.1", default-features = false, features = ["openblas"] }
#openblas-src = { version = "0.5", default-features = false, features = ["cblas", "system"] }
bytes = "0.4"
geo = "0.7.4"
regex = "1.*"
lazy_static = "1.*"
kodama = "0.2.1"
fast_text = "0.1.2"
funfun = "0.2.2"
diesel = { version = "1.3", features = ["postgres"] }
cute = "0.3.0"